force-app/main/default/objects/OrderItem__c/OrderItem__c.object-meta.xml
<CustomObject>
    <description>Object to save Items related with an Order</description>
    <label>Order Item</label>
    <nameField>
        <displayFormat>OI-{0000000}</displayFormat>
        <label>Name of Order Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>