force-app/main/default/objects/OrderItem__c/fields/ItemName__c.field-meta.xml
<CustomField>
    <fullName>ItemName__c</fullName>
    <description>Name of the item, eg: Soda</description>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>