force-app/main/default/objects/OrderItem__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Field Master-Detail that creates relationship with the Order</description>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>